# bevy-ai-forge

./: .gitignore  BeamableServices.sln  Cargo.toml  README.md  beam_common.json  beam_common_accounts.json  bevy_forge.d.ts  bevy_forge.js  bevy_forge_bg.wasm.d.ts  justfile  microservice_config.json
.bbb/: currency.coins.json  items.AiItemContent.AiCake.json  items.AiItemContent.AiShield.json  items.AiItemContent.AiSword.json
.beamable/: .gitignore  beamoLocalManifest.json  config-defaults.json  connection-configuration.json  otel-config.json
.beamable/Content/: global-manifest-content-tags.json
.config/: dotnet-tools.json
.github/workflows/: ci.yaml  release.yaml  web_build.yaml
ForgeService/: .gitignore  ForgeService.sln  oapi.json
beam_common/: Cargo.toml  README.md
beam_common/.openapi-generator/: FILES
beam_common/docs/: CommonResponse.md  ContextInfo.md  DefaultApi.md  ListTokenResponse.md  ListTokensRequest.md  RevokeTokenRequest.md  TokenRequestWrapper.md
beam_common/src/: lib.rs
beam_common_accounts/: Cargo.toml  README.md
beam_common_accounts/.openapi-generator/: FILES
beam_common_accounts/docs/: Account.md  AccountAvailableRequest.md  AccountPersonallyIdentifiableInformationResponse.md  AccountPlayerView.md  AccountPortalView.md  AccountRegistration.md  AccountSearchResponse.md  AccountUpdate.md  AttachExternalIdentityApiRequest.md  CurrencyChange.md  DefaultApi.md  DeleteExternalIdentityApiRequest.md  EmailUpdateConfirmation.md  EmailUpdateRequest.md  EntitlementGenerator.md  ExternalIdentity.md  GamerTagAssociation.md  GetAdminsResponse.md  InFlightMessage.md  ItemProperty.md  ListAuditResponse.md  PasswordUpdateRequest.md  PaymentAuditEntryViewModel.md  PaymentHistoryEntryViewModel.md  RoleMapping.md  SearchAccountsRequest.md  StatsResponse.md  ThirdPartyAssociation.md
beam_common_accounts/src/: lib.rs
beam_common_inventory/: Cargo.toml  README.md
beam_common_inventory/.openapi-generator/: FILES
beam_common_inventory/docs/: ArchetypeProxy.md  CurrencyPreview.md  CurrencyView.md  DefaultApi.md  EndTransactionRequest.md  InventoryQueryRequest.md  InventoryUpdateRequest.md  InventoryView.md  Item.md  ItemCreateRequest.md  ItemGroup.md  ItemUpdateRequest.md  MultipliersGetResponse.md  PreviewVipBonusResponse.md  TransferRequest.md  VipBonus.md
beam_microservice/: Cargo.toml  README.md
beam_microservice/.openapi-generator/: FILES
beam_microservice/docs/: AdminApi.md  BeamablePeriodCommonPeriodApiPeriodInventoryPeriodFederatedItemCreateRequest.md  BeamablePeriodCommonPeriodApiPeriodInventoryPeriodFederatedItemDeleteRequest.md  BeamablePeriodCommonPeriodApiPeriodInventoryPeriodFederatedItemUpdateRequest.md  BeamablePeriodCommonPeriodApiPeriodInventoryPeriodItemProperty.md  BeamablePeriodCommonPeriodContentPeriodSerializableDictionaryStringToString.md  BeamablePeriodCommonPeriodFederatedAuthenticationResponse.md  BeamablePeriodCommonPeriodFederatedInventoryProxyState.md  BeamablePeriodCommonPeriodFederatedItemProxy.md  BeamablePeriodServerPeriodMicroserviceRuntimeMetadata.md  OpenAiApi.md  OpenAiAuthenticateRequestArgs.md  OpenAiInventoryPutRequestArgs.md  OpenAiInventoryStateRequestArgs.md  SayHiRequestArgs.md  SellSwordRequestArgs.md  UncategorizedApi.md
beam_sdk_autogenerated/: Cargo.toml  README.md
beam_sdk_autogenerated/.openapi-generator/: FILES
beam_sdk_autogenerated/docs/: AcceptMultipleAttachments.md  Account.md  AccountAvailableResponse.md  AccountPersonallyIdentifiableInformationResponse.md  AccountPlayerView.md  AccountPortalView.md  AccountRolesReport.md  AccountSearchResponse.md  AccountUpdate.md  ActiveListingResponse.md  AddAccountRequest.md  AddTags.md  AdminGetPlayerStatusRequest.md  AdminGetPlayerStatusResponse.md  AdminPlayerStatus.md  AliasAvailableRequest.md  AliasAvailableResponse.md  AnnouncementAttachment.md  AnnouncementContent.md  AnnouncementContentResponse.md  AnnouncementDto.md  AnnouncementQuery.md  AnnouncementQueryResponse.md  AnnouncementRawResponse.md  AnnouncementRequest.md  AnnouncementState.md  AnnouncementView.md  ArchiveOrUnarchiveManifestsRequest.md  ArchiveProjectRequest.md  AttachExternalIdentityApiRequest.md  AttachExternalIdentityApiResponse.md  Attachment.md  AttachmentProperty.md  AttachmentRequest.md  AuthApi.md  AuthResponse.md  AvailabilityRequest.md  AvailabilityResponse.md  AvailableRolesResponse.md  BatchDeleteInFlightRequest.md  (+558 more)
bevy_beam_sdk/: Cargo.toml
bevy_beam_sdk/src/: config.rs  content.rs  context.rs  inspector.rs  lib.rs  notifications.rs  requests.rs  state.rs  utils.rs  websocket.rs
bevy_beam_sdk/src/api/: accounts.rs  common.rs  content.rs  inventory.rs  mod.rs  stats.rs
bevy_beam_sdk/src/data/: auth.rs  mod.rs  stats.rs
bevy_beam_sdk/src/notifications/: inventory.rs  mod.rs  stats.rs
bevy_beam_sdk/src/requests/: beam_request.rs  client.rs  mod.rs
bevy_beam_sdk/src/slot/: beam_slot.rs  contexts.rs  inventory.rs  mod.rs  token_storage.rs  user_view.rs
bevy_beam_sdk_derive/: Cargo.toml
bevy_beam_sdk_derive/src/: lib.rs
bevy_eventwork/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
bevy_eventwork/examples/: client.rs
bevy_eventwork/src/: lib.rs  network_message.rs  websockets.rs
bevy_eventwork_mod_websockets/: Cargo.toml
bevy_eventwork_mod_websockets/src/: lib.rs
bevy_forge/: Cargo.toml
bevy_forge/src/: consts.rs  debug.rs  main.rs  microservice.rs  requests.rs  utils.rs
bevy_forge/src/beam/: config.rs  context.rs  mod.rs  utils.rs
bevy_forge/src/beam/api/: accounts.rs  common.rs  inventory.rs  mod.rs
bevy_forge/src/game/: components.rs  mod.rs
bevy_forge/src/states/: game.rs  init.rs  login_screen.rs  menu.rs  mod.rs
bevy_forge/src/ui/: mod.rs
bevy_forge/src/ui/widgets/: mod.rs  scroll_view.rs
bevy_forge/wasm/: index.html
services/ForgeService/: AiContentService.cs  ChatService.cs  Dockerfile  ForgeService.cs  ForgeService.csproj  Program.cs  federations.json
services/ForgeStorage/: ForgeStorage.cs  ForgeStorage.csproj  StorageExtensions.cs
services/ServiceCommon/: AiItemContent.cs  ServiceCommon.cs
(+748 files in other folders)
