[workspace]
resolver = "2"

members = [
    "beam_microservice",
    "bevy_eventwork",
    "bevy_beam_sdk",
    "bevy_forge",
]

# Compile with Performance Optimizations:
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
panic = 'abort'
lto = true
