[package]
name = "bevy_beam_sdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Experimental implementation of Beamable SDK into Bevy engine."

[dependencies.bevy]
version = "0.15"
default-features = false
features = ["bevy_state"]

[dev-dependencies.bevy]
version = "0.15"
default-features = true

[dependencies.beam_autogen_rs]
git = "https://github.com/beamable/beam_autogen_rs"
rev = "adc92aa"

[dependencies]
bevy_pkv = "0.12"
crossbeam-channel = "0.5"
bevy_eventwork_mod_websockets = { version = "0.3.1", path = "../bevy_eventwork_mod_websockets" }
bevy_eventwork = { version = "0.10.0", path = "../bevy_eventwork", default-features = false }
url = { version = "2.5.4" }
bevy-inspector-egui = { version = "0.29", default-features = false, features = [
    "bevy_render",
] }
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-compat = "0.2"
mio = "1"

[dependencies.serde_json]
version = "1.0"

[dependencies.reqwest]
version = "^0.12"
features = ["json", "multipart", "rustls-tls"]
