[package]
name = "bevy_beam_sdk"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Experimental implementation of Beamable SDK into Bevy engine."

[features]
default = ["websocket"]
websocket = ["dep:bevy_eventwork"]

[dependencies.bevy]
version = "0.15"
default-features = false
features = ["bevy_state"]

[dev-dependencies.bevy]
version = "0.15"
default-features = true

[dependencies.beam_autogen_rs]
git = "https://github.com/beamable/beam_autogen_rs"
rev = "2db93ad"

[dependencies]
bevy_pkv = "0.12"
crossbeam-channel = "0.5"
bevy_eventwork = { optional = true, version = "0.11", path = "../bevy_eventwork", default-features = false, features = ["websocket"] }
#bevy-inspector-egui = { version = "0.29", default-features = false, features = [
#    "bevy_render",
#] }
url = { version = "2.5.4" }
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-compat = "0.2"
mio = "1"

[dependencies.serde_json]
version = "1.0"

[dependencies.reqwest]
version = "^0.12"
features = ["json", "multipart"]
