[package]
name = "bevy_forge"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"


[dependencies]
console_error_panic_hook = "0.1"
bevy = "0.14"
bevy_egui = { version = "0.28", default-features = false, features = ["default_fonts", "render"] }
bevy-inspector-egui = { version = "0.25", default-features = false, features = ["bevy_render"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-lite = "2.2.0"
bevy_pkv = "0.11"
bevy_button_released_plugin = "0.6"
bevy_simple_text_input = "0.9"
bevy_args = "1.5"
clap = { version = "4.4", features = ["derive"] }
crossbeam-channel = "0.5"
rand = "0.8.5"
bevy_simple_scroll_view = "0.2"

[dependencies.reqwest]
version = "^0.12"
features = ["json", "multipart", "rustls-tls"]

[target.'cfg(target_arch = "aarch64")'.dependencies]
async-compat = "0.2"
mio = "1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
async-compat = "0.2"
mio = "1"

[dependencies.beam_microservice]
path = "../beam_microservice"

[dependencies.bevy_beam_sdk]
path = "../bevy_beam_sdk"
