[package]
name = "bevy_forge"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR CC0-1.0"


[dependencies]
bevy_pkv = "0.15"
bevy_simple_text_input = "0.14"
bevy_args = "3.0"
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
rand = "0.8.5"
bevy-inspector-egui = { version = "0.36" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bevy_ehttp = "0.7"

[dependencies.bevy]
version = "0.18"
features = ["jpeg"]

[target.'cfg(target_arch = "aarch64")'.dependencies]
async-compat = "0.2"
mio = "1"

[target.'cfg(target_arch = "x86_64")'.dependencies]
async-compat = "0.2"
mio = "1"

[dependencies.beam_microservice]
path = "../beam_microservice"

[dependencies.bevy_beam_sdk]
path = "../bevy_beam_sdk"
